Fixes for missing songs implemented. Still having like button issues on mobile

--- a/src/Components/SwipeHeader/SwipeHeader.scss
+++ b/src/Components/SwipeHeader/SwipeHeader.scss
@@ -66,7 +66,7 @@ $green-dark-back: #1db954;
 
 @media only screen and (max-height: 700px) {
   .swipe-header {
-    padding-top: 50px;
+    padding-top: 60px;
     .header-gradient {
       h1 {
         padding: 0px 72px 0px 16px;
